# AgphysPortal

./: .gitignore  CMakeLists.txt  FIXME.txt  Makefile  README.md  check_cuda.cu  config.ini  createHome.sh  createUni.sh
cmake/: CMakeCache.txt
fonts/: SourceSansPro-Regular.ttf.40_2_4_0.sdf
objs/: companionCube.mtl  defaultCube.mtl  level0.mtl  level1.mtl  lootbox.mtl  portalWalls.mtl  suitcase.mtl  trump_tower_ny.mtl  x-wing_t70.mtl
shader/: blurShader.glsl  debug.glsl  depthShader.glsl  effectParticlesPost.glsl  effectParticlesRender.glsl  finalShader.glsl  fluidFinalShader.glsl  foamDepthShader.glsl  foamIntensityShader.glsl  foamRadianceShader.glsl  foamThicknessShader.glsl  lighting_helper_fs.glsl  particleBoost.glsl  particles.glsl  particlesDepth.glsl  postProcessingTest.glsl  post_processing_helper_fs.glsl  screen.glsl  skybox.glsl  tess.glsl  tess_depth.glsl  tess_wireframe.glsl  texturedPortal.glsl  thicknessShader.glsl
src/: AgphysCudaConfig.h  CMakeLists.txt  EigenConfig.h  Level.cpp  Level.h  Player.cpp  Player.cu  Player.h  PlayerCamera.h  agphys.cpp  agphys.h  agphys_io.cpp  glBuffers.cpp  glBuffers.h  hacky.hack  imguiOptions.h  main.cpp
src/cuda/: clothCreator.cpp  clothCreator.h  collisionData.h  fluidCreator.cpp  fluidCreator.h  particle.h  playerCreator.cpp  playerCreator.h  predicates.h  rigidBodyCreator.cpp  rigidBodyCreator.h  rigidBodyManager.cpp  rigidBodyManager.h
src/cuda/logic/: portal.cu  portal.h
src/cuda/particleSystem/: particleSystem.cu  particleSystem.h  particleSystem_cloths.cu  particleSystem_cloths.h  particleSystem_collisionResolver.cu  particleSystem_collisionResolver.h  particleSystem_collisions.inl  particleSystem_fluids.cu  particleSystem_fluids.h  particleSystem_forceBased.cu  particleSystem_forceBased.h  particleSystem_init.cu  particleSystem_io.cpp  particleSystem_marchingCubes.cu  particleSystem_mouseInteraction.cu  particleSystem_mouseInteraction.h  particleSystem_portal.cu  particleSystem_rigidBodies.cu  particleSystem_rigidBodies.h  particleSystem_stabilization.cu  particleSystem_stabilization.h  particleSystem_tables.inl.cu
src/cuda/svd/: svd3_wrapper.h
src/platform/: linuxFiles.cpp  linuxFiles.h  platform.cpp  platform.h  windowsFiles.cpp  windowsFiles.h
src/profiling/: Profiler.cpp  Profiler.h  Time.cpp  Time.h  Timer.cpp  Timer.h
src/rendering/: CustomDeferredLighting.cpp  CustomDeferredLighting.h  CustomDeferredRenderer.cpp  CustomDeferredRenderer.h  CustomIndexedVertexBuffer.cu  CustomIndexedVertexBuffer.h  CustomPostProcessor.cpp  CustomPostProcessor.h  CustomSMAA.cpp  CustomSMAA.h  EffectParticles.cpp  EffectParticles.h  MockupRenderer.cpp  MockupRenderer.h  PortalRenderer.cpp  PortalRenderer.h  Scene.cpp  Scene.h  Scene_io.cpp  Skybox.cpp  Skybox.h  TextureCube.cpp  TextureCube.h  WaterRenderer.cpp  WaterRenderer.cu  WaterRenderer.h  WaterShaders.cpp  WaterShaders.h  structures.h
